--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@fortawesome/free-solid-svg-icons": "^6.5.1",
     "@fortawesome/react-fontawesome": "^0.2.0",
     "next": "14.0.4",
+    "next-images": "^1.8.5",
     "react": "^18",
     "react-dom": "^18",
     "react-icons": "^4.12.0"
